RESOLVED FIXED277675
REGRESSION(281744@main): [GTK] Flickering when switching tabs
https://bugs.webkit.org/show_bug.cgi?id=277675
Summary REGRESSION(281744@main): [GTK] Flickering when switching tabs
Carlos Garcia Campos
Reported 2024-08-05 23:32:18 PDT
This started to happen after enabling explicit sync.
Attachments
Carlos Garcia Campos
Comment 1 2024-08-05 23:51:10 PDT
EWS
Comment 2 2024-08-06 02:58:31 PDT
Committed 281885@main (139b28de2305): <https://commits.webkit.org/281885@main> Reviewed commits have been landed. Closing PR #31777 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.