REGRESSION(281744@main): [GTK] Flickering when switching tabs https://bugs.webkit.org/show_bug.cgi?id=277675

Reviewed by Alejandro G. Castro.

This seems to be caused by a memory corruption or something like that.
For some reason we can't add a UnixFileDescriptor to the FenceSource
struct that is allocated by GLib. So, move the UnixFileDescriptor to the
FenceMonitor class, keeping FenceSource struct simple. Also make sure we
don't commit the pending buffer if gtk schedules a redraw while are
still waiting for the fence.

* Source/WebKit/UIProcess/glib/FenceMonitor.cpp:
(WebKit::FenceMonitor::ensureSource):
(WebKit::FenceMonitor::addFileDescriptor):
(WebKit::FenceSource::~FenceSource): Deleted.
* Source/WebKit/UIProcess/glib/FenceMonitor.h:
(WebKit::FenceMonitor::hasFileDescriptor const):
* Source/WebKit/UIProcess/gtk/AcceleratedBackingStoreDMABuf.cpp:
(WebKit::AcceleratedBackingStoreDMABuf::prepareForRendering):

Canonical link: https://commits.webkit.org/281885@main